server/compilers/goLiteJS/src/test/ml1/valid/random.go
package main

func firstSyntaxError() {

  /*var fe string = `\n`*/
  var hello [0777] int
   type (
    num int
    point struct {
      x, y float64
    }
  )
   type (
	Point struct{ 
		x, y float64 
	}
	Polar Point
)
}

func secondSyntaxError(b int) (bool) {
 	return 
}
