server/compilers/goLiteJS/src/test/ml1/invalid/struct1.go
// struct literal
package main

type point struct {
        x, y, z int
}

var p point = point{ 1, 2, 3 }
